k8s/overlays/stag/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workshop-app
spec:
  rules:
    - host: workshop-app-stag
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: workshop-app
                port:
                  name: http
